# ide.ai

./: .gitignore  CLAUDE.md  COLOR_PALETTE.md  LICENSE  README.md  RESPONSIVENESS_REPORT.md  RESPONSIVE_QUICK_REFERENCE.md  TESTING_METHODOLOGY.md  build.sh  ide_ai.spec  install-linux.sh  install-windows.ps1  main.py  pyproject.toml
.github/workflows/: build-releases.yml
skills/: CHECKLIST.md  INDEX.md  README.md
skills/architecture-guide/: SKILL.md
skills/design-system/: SKILL.md
skills/development-workflow/: SKILL.md
skills/implementation-reference/: SKILL.md
skills/style-guide/: SKILL.md
src/ide_ai/: app.py  app.tcss  app_new.py  app_new.tcss  context_manager.py  status_indicators.py
src/ide_ai/ai/: base.py  claude.py  copilot.py
src/ide_ai/layout/: panel_grid.py  workspace.py
src/ide_ai/panels/: action_bar.py  ai_chat.py  chat_box.py  chat_panel.py  file_tree.py  provider_bar.py  terminal.py
src/ide_ai/style/: animations.tcss  colors.tcss  spacing.tcss  typography.tcss
tests/: test_app.py  test_parallel_execution.py  test_responsive_layout.py
